Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0024  2013-05-01 10:05:56 PDT
    [IMPROVEMENTS]
        - Fix warnings for Plack::App::WrapCGI (frioux)
        - Ignore emacs lock file from restarter (maio)
        - Add documentation for environment variable in Auth::Basic
        - Some Metadata cleanup and Travis CI

1.0023  2013-04-08 11:13:11 PDT
    [IMPROVEMENTS]
        - Use Apache::LogFormat::Compiler in AccessLog (kazeburo)

1.0022  2013-04-02 12:37:42 PDT
    [BUG FIXES]
        - Fixed a major bug in 1.0020-1.0021 where posix_default prevents arbitrary arguments
          for plackup-compat (e.g. starman) to handle them (Thanks to justnoxx) Starman#66

    [IMPROVEMENTS]
        - Fixed test warnings (Keedi Kim)

1.0021  2013-04-02 11:20:00 PDT
        - Repackage with Milla v0.9.6 #392

1.0020  2013-04-01 19:34:54 PDT
    [INCOMPATIBLE CHANGES]
        - Enable posix_default and gnu_compat in plackup Getopt, so that ambiguous
          option names do not match with long options accidentally

    [IMPROVEMENTS]
        - Document fix for the AccessLog (ether)
        - Special-case Content-Length and Content-Type for %{}i in AccessLog format #387


1.0019  2013-04-01 17:58:25 PDT
        - Trial release with Milla

1.0018 Fri Mar  8 10:43:45 PST 2013
    [IMPROVEMENTS]
        - Performance boost in Plack::Request#query_parameters (lestrrat)
        - Added custom log formats for %m, %U, %q and %H (Hiroshi Sakai)
        - Fixed warnings in SimpleContentFilter (earino)

    [DOCUMENTATION]
        - Added docs about plackup --path
        - Added docs about using manager object in Plack::Handler::FCGI

1.0017-TRIAL Thu Feb  7 19:21:24 PST 2013
    [INCOMPATIBLE CHANGES]
        - Gives you warnings when you use one of Plack::App objects in `plackup -e` or
          in .psgi files but forgot to call ->to_app to make it a PSGI application (#369)